# train-schedule

Client/: CMakeLists.txt  main.cpp
Client/Toolkit/: Toolkit.cpp  Toolkit.h
Server/: CMakeLists.txt  main.cpp
Server/CommandClass/: Command.h
Server/CommandClass/AddArrivalDelayCommandClass/: AddArrivalDelay.cpp  AddArrivalDelay.h
Server/CommandClass/AddDepartureDelayCommandClass/: AddDepartureDelay.cpp  AddDepartureDelay.h
Server/CommandClass/CallCommandClass/: CallCommand.cpp  CallCommand.h
Server/CommandClass/GetArrivalInfoCommandClass/: GetArrivalInfo.cpp  GetArrivalInfo.h
Server/CommandClass/GetDepartureInfoCommandClass/: GetDepartureInfo.cpp  GetDepartureInfo.h
Server/CommandClass/GetTrainsInfoCommandClass/: GetTrainsInfo.cpp  GetTrainsInfo.h
Server/CommandClass/LoginCommandClass/: Login.cpp  Login.h
Server/CommandClass/LogoutCommandClass/: Logout.cpp  Logout.h
Server/SocketClass/: Socket.cpp  Socket.h
Server/TimeClass/: Time.cpp  Time.h
Server/ToolkitClass/: Toolkit.cpp  Toolkit.h  users.db  users.txt
Server/Types/: NotificationStructType.h
Server/Types/CommandQueue/: CommandQueue.cpp  CommandQueue.h
Server/Types/Command_Input/: Command_input.h
Server/Types/Station/: Station.h
Server/Types/ThreadStruct/: ThreadStruct.h
Server/Types/Train/: Train.h
Server/XmlClass/: Xml.cpp  Xml.h  data.xml
